--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header including the logo and the main navigation -->
     <header class="page-header">
         <!-- find an svg logo -->
-        <img src="img/Alex Jackonski.png" alt="logo" class="page-header__item">
+        <img src="img/Alex Jackonski.png" alt="website logo" class="page-header__item">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
