--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <title>Alex Jackonski - Portfolio website</title>
+        <title>Alex Jackonski - Portfolio</title>
     
     </head>
 <body>
@@ -38,31 +38,23 @@
     <h1>Work</h1>
    <div class="grid">
     <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-           Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
+        <h2>project title goes here!</h2>
+        <p></p>
         <a href="#">See project on GitHub</a>
      </div>
      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-           Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
+        <h2>project title goes here!</h2>
+        <p></p>
         <a href="#">See project on GitHub</a>
      </div>
      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-           Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
+        <h2>project title goes here!</h2>
+        <p></p>
         <a href="#">See project on GitHub</a>
      </div>
      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-           Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
+        <h2>project title goes here!</h2>
+        <p></p>
         <a href="#">See project on GitHub</a>
      </div>
    </div>
