--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
         </ul>
     </div>
 
-    <div>
-        <form action="" method="post" id="contact-form">
+    <div class="contact-message">
+        <form action="mailto:ajackonski1@gmail.com" method="post" enctype="multipart/form-data" id="contact-form">
             <label class="standard-label" for="contact-email">Email: </label>
             <input type="email" id="contact-email">
 
