updated about me text

--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
 
         <p>This page is about myself. This is what I enjoy doing:</p>
         <ul class="about-list">
-          <li>Front-end development</li>
-          <li>Back-end development</li>
-          <li>Test driven development</li>
-          <li>Climbing</li>
+          <li>Learning about web development</li>
+          <li>Watching wrestling</li>
+          <li>Submitting tasks</li>
+          <li>Playing video games</li>
         </ul>
         
         <a href="https://www.linkedin.com/in/alex-jackonski-99b544273/" target="_blank" class="button" id="linkedin-button">Check out my Linkedin</a>
