--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/wikipedia.ico" /> <!--add a proper favicon-->
+    <link rel="icon" href="img/favicon.ico" /> <!--add a proper favicon-->
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/CSS" href="css/style.production.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
