tidied up various errors given in w3c validator

--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.ico" /> <!--add a proper favicon-->
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="icon" href="img/favicon.ico"> <!--add a proper favicon-->
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/CSS" href="css/style.production.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <title>Alex Jackonski - Portfolio homepage</title>
+    <title>Alex Jackonski - Contact page</title>
 
 </head>
 
 <body>
     <header class="page-header">
-        <img src="img/Alex Jackonski.png" alt="logo" class="page-header__item">
+        <img src="img/AlexJackonski.png" alt="website logo" class="page-header__item">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -39,22 +39,24 @@
         <h1>Contact Me:</h1>
     </div>
     <div>
-        <ul role="contact-info">
+        <ul role="main-contact">
             <li role="presentation">
                 My house<br>
                 109 Maple Road<br>
                 42211 Cadiz, KY<br>
             </li>
-            <br>
-            <nav>
-                <li role="presentation">
-                    <a href="tel:+1 270 350 2875" aria-label="phone-nuimber">1-270-350-2875</a><br>
-                </li>
+            <li>
                 <br>
-                <li role="presentation">
-                    <a href="mailto:ajackonski1@gmail.com">Send me an email!</a>
-                </li>
-            </nav>
+            </li>
+            <li role="presentation">
+                <a href="tel:+1-270-350-2875" aria-label="phone-number">1-270-350-2875</a><br>
+            </li>
+            <li>
+                <br>
+            </li>
+            <li role="presentation">
+                <a href="mailto:ajackonski1@gmail.com">Send me an email!</a>
+            </li>
         </ul>
     </div>
 
@@ -97,5 +99,4 @@
     </footer>
     <script src="js/tota11y.min.js"></script>
 </body>
-
 </html>
