--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.ico" /> <!--add a proper favicon-->
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="icon" href="img/favicon.ico"> <!--add a proper favicon-->
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/CSS" href="css/style.production.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,8 +18,7 @@
 <body>
     <!-- Header including the logo and the main navigation -->
     <header class="page-header">
-        <!-- find an svg logo -->
-        <img src="img/Alex Jackonski.png" alt="website logo" class="page-header__item">
+        <img src="img/AlexJackonski.png" alt="website logo" class="page-header__item">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
