--- a/work.html
+++ b/work.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.ico" /> <!--add a proper favicon-->
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="icon" href="img/favicon.ico"> <!--add a proper favicon-->
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/CSS" href="css/style.production.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <title>Alex Jackonski - Portfolio homepage</title>
+    <title>Alex Jackonski - Work Page</title>
 
 </head>
 
 <body>
     <header class="page-header">
-        <img src="img/Alex Jackonski.png" alt="logo" class="page-header__item">
+        <img src="img/AlexJackonski.png" alt="website logo" class="page-header__item">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
