tidied up the contact info list and fixed a w3c validator error

--- a/contact.html
+++ b/contact.html
@@ -35,29 +35,26 @@
             </ul>
         </nav>
     </header>
-    <div>
+    <div class="contact-header">
         <h1>Contact Me:</h1>
     </div>
-    <div>
-        <ul role="main-contact">
-            <li role="presentation">
-                My house<br>
-                109 Maple Road<br>
-                42211 Cadiz, KY<br>
-            </li>
+    <div class="contact">
+        <ul>
             <li>
-                <br>
-            </li>
-            <li role="presentation">
-                <a href="tel:+1-270-350-2875" aria-label="phone-number">1-270-350-2875</a><br>
-            </li>
-            <li>
-                <br>
-            </li>
-            <li role="presentation">
                 <a href="mailto:ajackonski1@gmail.com">Send me an email!</a>
             </li>
+            <li>
+                <a href="https://github.com/ajackonski">View my Github!</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/alex-jackonski-99b544273/">Connect with me on Linkedin!</a>
+            </li>
         </ul>
+
+                <p class="simply">
+                    Or simply leave me a message below!
+                </p>
+
     </div>
 
     <div class="contact-form">
@@ -99,4 +96,5 @@
     </footer>
     <script src="js/tota11y.min.js"></script>
 </body>
+
 </html>
