--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,13 @@
     <div class="contact">
         <ul>
             <li>
-                <a href="mailto:ajackonski1@gmail.com">Send me an email!</a>
+                <a href="mailto:ajackonski1@gmail.com" target="_blank">Send me an email!</a>
             </li>
             <li>
-                <a href="https://github.com/ajackonski">View my Github!</a>
+                <a href="https://github.com/ajackonski" target="_blank">View my Github!</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/alex-jackonski-99b544273/">Connect with me on Linkedin!</a>
+                <a href="https://www.linkedin.com/in/alex-jackonski-99b544273/" target="_blank">Connect with me on Linkedin!</a>
             </li>
         </ul>
 
