added work to my portfolio page

--- a/work.html
+++ b/work.html
@@ -40,9 +40,9 @@
         <h1>Work</h1>
         <div class="grid">
             <div class="grid__item">
-                <h2>project title goes here!</h2>
-                <p></p>
-                <a href="#">See project on GitHub</a>
+                <h2>To-do list</h2>
+                <p>A to-do list built using Jquery.</p>
+                <a href="https://github.com/ajackonski/jQuery-to-do">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>project title goes here!</h2>
