--- a/work.html
+++ b/work.html
@@ -45,9 +45,9 @@
                 <a href="https://github.com/ajackonski/jQuery-to-do">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>project title goes here!</h2>
-                <p></p>
-                <a href="#">See project on GitHub</a>
+                <h2>Simple Pokedex App</h2>
+                <p>A simple webapp built using javascript, jquery, and bootstrap</p>
+                <a href="https://github.com/ajackonski/Pokedex-App">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>project title goes here!</h2>
