--- a/work.html
+++ b/work.html
@@ -47,11 +47,12 @@
             <div class="grid__item">
                 <h2>Simple Pokedex App</h2>
                 <p>A simple webapp built using javascript, jquery, and bootstrap</p>
+                <a href="https://docs.google.com/presentation/d/19gQNmOtbsZsJdRP7dsVzQAaJonG9SYGMtdZjLJAyOK4/edit?usp=sharing">Case Study</a>
                 <a href="https://github.com/ajackonski/Pokedex-App">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>project title goes here!</h2>
-                <p></p>
+                <h2>Delta Green Character Generator</h2>
+                <p>A command line application that generates a baseline character for the tabletop RPG Delta Green built with python</p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="grid__item">
